--- a/HouseAccounting.Web/packages.config
+++ b/HouseAccounting.Web/packages.config
@@ -1,12 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net46" />
+  <package id="AutoMapper" version="4.2.1" targetFramework="net46" />
   <package id="bootstrap" version="3.3.7" targetFramework="net46" />
-  <package id="Castle.Core" version="3.3.3" targetFramework="net46" />
-  <package id="Castle.Windsor" version="3.3.0" targetFramework="net46" />
+  <package id="Castle.Core" version="4.2.1" targetFramework="net46" />
+  <package id="Castle.Windsor" version="4.1.0" targetFramework="net46" />
   <package id="jQuery" version="3.1.1" targetFramework="net46" />
   <package id="jQuery.Validation" version="1.15.1" targetFramework="net46" />
-  <package id="LiteDB" version="4.0.0" targetFramework="net46" />
+  <package id="LiteDB" version="4.1.2" targetFramework="net46" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net46" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net46" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net46" />
