--- a/HouseAccounting.Web/packages.config
+++ b/HouseAccounting.Web/packages.config
@@ -18,7 +18,8 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net46" />
   <package id="Modernizr" version="2.8.3" targetFramework="net46" />
   <package id="MVC4.Paging" version="3.1.1" targetFramework="net46" />
-  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net46" />
+  <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net46" />
+  <package id="popper.js" version="1.12.9" targetFramework="net46" />
   <package id="Respond" version="1.4.2" targetFramework="net46" />
   <package id="WebGrease" version="1.6.0" targetFramework="net46" />
 </packages>
