--- a/HouseAccounting.DTO.Translators/HouseAccounting.DTO.Translators.csproj
+++ b/HouseAccounting.DTO.Translators/HouseAccounting.DTO.Translators.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>HouseAccounting.DTO.Translators</RootNamespace>
     <AssemblyName>HouseAccounting.DTO.Translators</AssemblyName>
-    <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
